awsdocker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: awsdocker-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: awsdocker
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: awsdocker
    spec:
      containers:
        - image: yogawahyudi7/awsdocker:v1
          name: awsdocker
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: awsdocker-service
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
  selector:
    app: awsdocker
