go-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
        - image: yogawahyudi7/awsdocker:v1
          name: go-app
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: go-app-service
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
  selector:
    app: go-app
