mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - image: mysql:5.6
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          # resources:
          #   requests:
          #     cpu: 100m
          #     memory: 128Mi
          #   limits:
          #     cpu: 100m
          #     memory: 512Mi
--- ## Untuk memisahkan object baru BAGIAN ATAS : DEPLOYMENT | BAGIAN BAWAH : SERVICE
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
